--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@
 }
 
 body {
-    background-color: #e9efaa;
+    background-color: #d1d1d1;
 }
 
 a {
@@ -18,7 +18,7 @@ a {
 nav {
     display: flex;
     justify-content: space-between;
-    background-color: #e9efaa;
+    background-color: #686867;
     padding: 2rem;
 }
 
@@ -29,7 +29,7 @@ nav {
 }
 
 .nav-link {
-    color: #191919;
+    color: #dfdcdc;
     font-size: 1.3rem;
 }
 
@@ -41,6 +41,7 @@ nav {
     width: min-content;
     height: min-content;
     background-color: white;
+    border-radius: 10px;
     padding: 10px;
     margin: 50px;
     gap: 10px;
